tree-sitter-eriun/test/corpus/lambda.txt
========
 lambda
========

(i: #L) '-> (T: #U i) '-> (t: T) -> t

---

(expr
  (lambda
    (sym)
    (levelT)
    (erased)
    (lambda
      (sym)
      (universe
		(levels
	        (sym)))
      (erased)
      (lambda
        (sym)
        (sym)
        (sym)))))
